<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="96dp"
            android:layout_height="6dp"
            android:layout_margin="16dp"
            android:background="@drawable/shape_dialog_indicator"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/dialog_title_privacy_policy"
            android:textColor="@color/colorDialogTitle"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:gravity="center"
            android:text="@string/dialog_description_privacy_policy"
            android:textColor="@color/colorDialogTitle"
            android:textSize="18sp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/dialog_action_privacy_policy_accept"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"/>


    </LinearLayout>

</layout>